# sukun

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  DOCKER_SETUP.md  Dockerfile  GMAIL_EXPORT_FEATURE.md  GMAIL_INTEGRATION.md  GMAIL_INTEGRATION_SUMMARY.md  GMAIL_SETUP.md  Makefile  PRD.md  README.md  docker-compose.prod.yaml  docker-compose.server.yaml  docker-compose.yaml  fly.toml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: cd.yaml  ci.yaml
app/: asgi.py  celeryapp.py  experiments.ipynb  gunicorn.conf.py  gunicorn.py  notebook_integration.ipynb  settings.py  urls.py  wsgi.py
app/blogchecker_service/: ai_tools.py  blog_checker_main.py  code_recipe_generator.py  e2b_runner.py  llm_utils.py  post_process.py  prompts.py  schemas.py  utils.py
app/blogchecker_service/executors/: base.py  simple_executor.py
app/common/: email.py  fields.py  file_utils.py  llm_utils.py  middleware.py  utils.py
app/common/storage/: base.py  factory.py  gcs_storage.py  mixins.py  s3_storage.py  utils.py
app/common/tests/: test_file_utils.py
app/email-app/: package-lock.json  package.json  tsconfig.json
app/email-app/emails/: codepen-newsletter.tsx  demodrive-report.tsx  demodrive-sign-up.tsx  demodrive-welcome.tsx
app/email-app/scripts/: render-email.ts
app/gmail_integration/: __init__.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
app/gmail_integration/migrations/: 0001_initial.py  0002_rename_gmail_messages_user_important_idx_gmail_messa_user_id_6ef690_idx_and_more.py  0003_gmailoauthstate.py  0004_remove_gmailoauthstate_user_id_gmailoauthstate_user.py  __init__.py
app/release_manager/: caching_utils.py  config.py  github_pr_process.py  github_utils.py  pr_templates.py  schemas.py  test_github_utils.py
app/release_manager/ai/: llm_utils.py  prompts.py
app/releases/: admin.py  apps.py  models.py  permissions.py  tasks.py  urls.py  utils_github.py  views_app.py  views_auth.py  views_products.py  views_releases.py  views_repositories.py  views_subscriptions.py  views_users.py
app/releases/migrations/: 0001_initial.py  0002_appuser_name_appuser_profile_url.py  0003_product_repository_release_productrepository_and_more.py  0004_product_user_productrepository_user_release_user_and_more.py  0005_remove_semanticrelease_product.py  0006_remove_semanticrelease_releases_and_more.py  0007_semanticrelease_footer_image_url_and_more.py  0008_alter_semanticrelease_footer_image_url_and_more.py  0009_semanticrelease_release_summary.py  0010_repository_forks_count_repository_full_response_and_more.py  0011_remove_repository_watchers_count.py  0012_remove_repository_forks_count_and_more.py  0013_alter_appuser_user.py  0014_appuser_active_org.py  0015_appuser_company_role_appuser_usage_reason_and_more.py  0016_appuser_verification_sent_at.py  0017_appuser_stripe_customer_id.py  0018_appuser_has_subscription_access_and_more.py
app/remotion_render/: package.json  render.mjs
app/sound_gen/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/sound_gen/migrations/: 0001_initial.py  0002_alter_track_audio_file_alter_track_preview_url_and_more.py  0003_alter_track_images.py  0004_alter_track_user.py
app/task_api/: README.md  admin.py  apps.py  decorators.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
app/task_api/migrations/: 0001_initial.py
app/task_api/tests/: test_task_api.py
app/user_org/: admin.py  apps.py  models.py  permissions.py  serializers.py  service_user_org.py  tasks.py  urls.py  views.py  views_auth.py  views_subscriptions.py  views_users.py
app/user_org/migrations/: 0001_initial.py  0001_squashed_0011_alter_appuser_auth_token.py  0002_alter_project_organization.py  0003_alter_project_options_project_metadata_and_more.py  0004_alter_project_options_rename_metadata_project_inputs_and_more.py  0005_remove_project_inputs_remove_project_user.py  0006_project_inputs_project_user.py  0007_rename_project_workspace.py  0008_anonymoussession.py  0009_anonymoussession_email.py  0012_alter_appuser_auth_token.py  0013_appuser_active_org.py
app/video_gen/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py
app/video_gen/migrations/: 0001_initial.py  0001_squashed_0048_alter_media_embedding_alter_recording_created_by_and_more.py  0002_capture_metadata.py  0003_brandasset.py  0004_delete_brandasset.py  0005_brandasset.py  0006_videoproject_videoasset.py  0007_videoproject_duration_videoproject_format_and_more.py  0008_rename_video_videoasset_video_project_and_more.py  0009_alter_videoasset_status.py  0010_videoasset_rendered_video_url.py  0011_videoasset_render_token.py  0012_videoasset_audio_recordings.py  0013_videoasset_remotion_state.py  0014_alter_videoasset_status.py  0015_videoasset_video_recordings.py  0016_rename_storage_dir_capture_storage_url_path_and_more.py  0017_rename_models_capture_and_videoasset.py  0018_rename_current_state_videoproject_state_and_more.py  0019_videoproject_is_public.py  0020_alter_media_type.py  0021_videoproject_workspace.py  0022_rendervideo_render_speed_rendervideo_resolution.py  0023_media_thumbnail_url.py  0024_videoproject_is_template.py  0025_remove_videoproject_duration_and_more.py  0026_media_tags_rendervideo_tags_videoproject_tags.py  0027_media_caption_metadata_and_more.py  (+21 more)
configs/db_scripts/: 02_enable_pg_stat_statements.sql  db-user-init.sql
infra-apprunner/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
web/: README.md  eslint.config.js  package.json  tailwind.config.js  vite.config.ts
web/src/: authenticated-layout.tsx  global.css  layout.tsx  main.tsx  router.tsx
(+350 files in other folders)
