# Since this is an application, we can omit the build-system section
# or keep it minimal if you want tooling compatibility

[project]
name = "gestral"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10, <3.13"
authors = [
    {name = "Selvam Palanimalai"},
]

# Dependencies listed for documentation purposes
# UV will read these
dependencies = [
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.7.0",
    "langchain-fireworks>=0.1.0",
    "langchain-core>=0.2.38",
    "langchain-openai>=0.3.0",
    "pydantic>=2.9.2",
    "django>=5.1.1",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.4.0",
    "django-environ>=0.11.2",
    "django-jsoneditor>=0.2.4",
    "whitenoise>=6.8.2",
    "gunicorn>=23.0.0",
    "resend>=2.4.0",
    "google-auth>=2.38.0",
    "google-api-python-client>=2.183.0",
    "google-cloud-storage>=3.1.0",
    "opencv-python>=4.11.0.86",
    "drf-spectacular>=0.28.0",
    "lumaai>=1.12.0",
    "boto3>=1.37.25",
    "celery[sqlalchemy,sqs,redis]>=5.5.0",
    "stripe>=11.6.0",
    "pillow-heif>=0.22.0",
    "django-celery-results>=2.6.0",
    "pillow-avif-plugin>=1.5.2",
    "assemblyai>=0.40.2",
    "pinecone>=7.3.0",
    "redis>=5.2.0",
    "pgvector>=0.4.1",
]

# UV specific configuration
[tool.uv]
# UV doesn't currently need specific configuration in pyproject.toml
# It will use the dependencies and optional-dependencies automatically

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "freezegun>=1.5.1",
    "pre-commit>=4.1.0",
    "ruff>=0.6.5",
]
